--- a/oficina-1/index.html
+++ b/oficina-1/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oficina 1</title>
 </head>
-<body>
+<body bgcolor="violet">
     <h1>Hello, world!</h1>
     <p>Bem vindo(a) a minha página web :D</p>
 
@@ -28,14 +28,19 @@
         <li>CSS 3</li>
         <li>Javascript</li>
     </ol>
-    <form action="submit">
+    
+    <form align="center">
+        <b>Formulário</b>
+        <br>
+        <br>
         <label for="nome">Nome:</label>
         <input type="text" id="nome">
         <br>
         <label for="email">Email:</label>
         <input type="email" id="email">
         <br>
-        <button type="submit">Enviar</button>
+        <br>
+        <input type="submit" value="Cadastrar">
     </form>
     
 </body>
